@@ -2,6 +2,11 @@ CHANGELOG
 =========
 
 
+2021-08-08
+----------
+### Changelog extractor
+* Add confluence syntax support for workrave (fixes #10).
+
 2021-08-04
 ----------
 ### Specfile
